Resolved libs version

--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,10 @@
     "angular": "1.5.x",
     "angular-mocks": "~1.2.x",
     "jSignature": "*"
+  },
+  "resolutions": {
+    "angular": "1.5.8",
+    "angular-bootstrap": "2.0.0",
+    "jquery": "3.1.0"
   }
 }
