--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "ods-lib",
   "description": "AngularJS tools Lib developed by One Development Solution LLC.",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "homepage": "https://github.com/hermeslm/ods-lib",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "main": "./dist/ods-lib.js",
   "dependencies": {
     "bootstrap": "3.3.7",
