--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ods-lib",
-  "private": true,
-  "version": "1.1.8",
+  "private": false,
+  "version": "1.1.9",
   "description": "AngularJS tools Lib developed by One Development Solution LLC.",
   "repository": "https://github.com/hermeslm/ods-lib",
   "license": "MIT",
