--- a/bower.json
+++ b/bower.json
@@ -8,14 +8,29 @@
   "main": "./dist/ods-lib.js",
   "dependencies": {
     "bootstrap": "3.3.7",
-    "angular-bootstrap": "2.5.0",
     "font-awesome": "4.7.0",
+    "angular-bootstrap": "1.3.3",
     "angular": "1.5.8",
-    "jSignature": "*"
+    "jSignature": "*",
+    "bootstrap-ui-datetime-picker": "2.4.3",
+    "jquery": "3.1.0",
+    "webcam-directive": "3.1.1",
+    "angular-bootstrap-toggle": "^0.1.2",
+    "angular-ui-select": "0.19.6",
+    "nz-toggle": "^2.2.1",
+    "angular-drag-and-drop-lists": "https://github.com/marceljuenemann/angular-drag-and-drop-lists.git#2.1.0",
+    "ng-table": "https://github.com/hermeslm/ng-table.git#4.0.2",
+    "underscore": "^1.8.3",
+    "angular-sanitize": "^1.6.6"
   },
   "resolutions": {
-    "angular": "1.5.8",
-    "angular-bootstrap": "2.0.0",
-    "jquery": "3.1.0"
+    "angular": "1.6.6",
+    "angular-bootstrap": "1.3.3",
+    "jquery": "3.1.0",
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css"
+      ]
+    }
   }
 }
