--- a/package.json
+++ b/package.json
@@ -6,30 +6,40 @@
   "repository": "https://github.com/hermeslm/ods-lib",
   "license": "MIT",
   "devDependencies": {
-    "extend": "~2.0.0",
-    "karma": "~0.10",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "~0.1.4",
     "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
+    "event-stream": "^3.3.4",
+    "extend": "~2.0.0",
     "gulp": "~3.8.8",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-clean": "~0.3.1",
+    "gulp-concat": "~2.4.1",
+    "gulp-filesize": "0.0.6",
+    "gulp-footer": "~1.0.5",
+    "gulp-header": "~1.1.1",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "~1.2.5",
+    "gulp-inject": "^4.3.0",
+    "gulp-jshint": "~1.8.5",
+    "gulp-load-plugins": "~0.7.0",
+    "gulp-main-bower-files": "^1.6.2",
+    "gulp-natural-sort": "^0.1.1",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.1",
     "gulp-util": "~3.0.1",
-    "gulp-clean": "~0.3.1",
-    "gulp-filesize": "0.0.6",
-    "gulp-concat": "~2.4.1",
-    "gulp-load-plugins": "~0.7.0",
-    "gulp-footer": "~1.0.5",
-    "gulp-header": "~1.1.1",
-    "gulp-jshint": "~1.8.5",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-angular-templatecache": "^2.0.0",
     "jshint-stylish": "~1.0.0",
-    "gulp-if": "~1.2.5"
+    "karma": "~0.10",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "main-bower-files": "^2.13.1",
+    "shelljs": "^0.2.6"
   },
   "dependencies": {
-    "angular": "^1.0.8"
+    "angular": "^1.0.8",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "run-sequence": "^2.2.0"
   },
   "scripts": {
     "postinstall": "bower install",
