--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "underscore": "^1.8.3",
     "angular-sanitize": "^1.6.6",
     "angular-confirm": "angular1-confirm#^1.1.0",
-    "angular-dialog-service": "^5.3.0"
+    "angular-dialog-service": "^5.3.0",
+    "angular-messages": "^1.6.6"
   },
   "resolutions": {
     "angular": "1.6.6",
