--- a/package.json
+++ b/package.json
@@ -36,10 +36,14 @@
   },
   "dependencies": {
     "angular": "^1.0.8",
+    "browser-sync": "^2.17.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "run-sequence": "^2.2.0"
+    "proxy-middleware": "0.15.0",
+    "recursive-copy": "2.0.6",
+    "run-sequence": "^2.2.0",
+    "xml2js": "^0.4.19"
   },
   "scripts": {
     "postinstall": "bower install",
