--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-bootstrap": "1.3.3",
     "angular": "1.5.8",
     "jSignature": "*",
-    "bootstrap-ui-datetime-picker": "2.4.3",
+    "bootstrap-ui-datetime-picker": "^2.6.0",
     "jquery": "3.1.0",
     "webcam-directive": "3.1.1",
     "angular-bootstrap-toggle": "^0.1.2",
@@ -25,7 +25,16 @@
     "angular-sanitize": "^1.6.6",
     "angular-confirm": "angular1-confirm#^1.1.0",
     "angular-dialog-service": "^5.3.0",
-    "angular-messages": "^1.6.6"
+    "angular-messages": "^1.6.6",
+    "angular-bootstrap-affix": "^0.2.2",
+    "angular-jquery": "^0.2.1"
+  },
+  "overrides": {
+    "angular-jquery": {
+      "main": [
+        "dist/angular-jquery.js"
+      ]
+    }
   },
   "resolutions": {
     "angular": "1.6.6",
