--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
     "angular-bootstrap": "1.3.3",
     "angular": "1.5.8",
     "jSignature": "*",
-    "bootstrap-ui-datetime-picker": "^2.6.0",
     "jquery": "3.1.0",
     "webcam-directive": "3.1.1",
     "angular-bootstrap-toggle": "^0.1.2",
@@ -27,7 +26,8 @@
     "angular-dialog-service": "^5.3.0",
     "angular-messages": "^1.6.6",
     "angular-bootstrap-affix": "^0.2.2",
-    "angular-jquery": "^0.2.1"
+    "angular-jquery": "^0.2.1",
+    "bootstrap-ui-datetime-picker": "^2.6.0"
   },
   "overrides": {
     "angular-jquery": {
