--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,16 @@
       "main": [
         "dist/angular-jquery.js"
       ]
+    },
+    "angular-confirm": {
+      "dependencies": {
+        "angular": "1.6.6"
+      }
+    },
+    "angular-sanitize": {
+      "dependencies": {
+        "angular": "1.6.6"
+      }
     }
   },
   "resolutions": {
