--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "font-awesome": "4.7.0",
     "angular-bootstrap": "1.3.3",
     "angular": "1.5.8",
+    "angular-sanitize": "1.5.8",
+    "angular-messages": "1.5.8",
     "jSignature": "*",
     "jquery": "3.1.0",
     "webcam-directive": "3.1.1",
@@ -21,10 +23,8 @@
     "angular-drag-and-drop-lists": "https://github.com/marceljuenemann/angular-drag-and-drop-lists.git#2.1.0",
     "ng-table": "https://github.com/hermeslm/ng-table.git#4.0.2",
     "underscore": "^1.8.3",
-    "angular-sanitize": "^1.6.6",
     "angular-confirm": "angular1-confirm#^1.1.0",
     "angular-dialog-service": "^5.3.0",
-    "angular-messages": "^1.6.6",
     "angular-bootstrap-affix": "^0.2.2",
     "angular-jquery": "^0.2.1",
     "bootstrap-ui-datetime-picker": "^2.6.0"
@@ -37,17 +37,17 @@
     },
     "angular-confirm": {
       "dependencies": {
-        "angular": "1.6.6"
+        "angular": "1.5.8"
       }
     },
     "angular-sanitize": {
       "dependencies": {
-        "angular": "1.6.6"
+        "angular": "1.5.8"
       }
     }
   },
   "resolutions": {
-    "angular": "1.6.6",
+    "angular": "1.5.8",
     "angular-bootstrap": "1.3.3",
     "jquery": "3.1.0",
     "bootstrap": {
