--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular": "1.5.8",
     "angular-sanitize": "1.5.8",
     "angular-messages": "1.5.8",
+    "angular-resource": "1.5.8",
     "jSignature": "*",
     "jquery": "3.1.0",
     "webcam-directive": "3.1.1",
