--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,10 @@
     "angular-jquery": "^0.2.1",
     "bootstrap-ui-datetime-picker": "^2.6.0",
     "ckeditor": "4",
-    "ngstorage": "^0.3.11"
+    "ngstorage": "^0.3.11",
+    "angular-moment": "^1.2.0",
+    "angular-datatables": "0.5.5",
+    "pdfmake": "^0.1.35"
   },
   "overrides": {
     "angular-jquery": {
@@ -50,16 +53,16 @@
       "dependencies": {
         "angular": "1.5.8"
       }
-    }
-  },
-  "resolutions": {
-    "angular": "1.5.8",
-    "angular-bootstrap": "1.3.3",
-    "jquery": "3.1.0",
+    },
     "bootstrap": {
       "main": [
         "dist/css/bootstrap.css"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "1.5.8",
+    "angular-bootstrap": "1.3.3",
+    "jquery": "3.1.0"
   }
 }
