--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,9 @@
     "ngstorage": "^0.3.11",
     "angular-moment": "^1.2.0",
     "angular-datatables": "0.5.5",
-    "pdfmake": "^0.1.35"
+    "pdfmake": "^0.1.35",
+    "ui-cropper": "^1.0.6",
+    "ng-file-upload": "^12.2.13"
   },
   "overrides": {
     "angular-jquery": {
