--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
+*.gif binary
 *.jpg binary
 *.jar binary
 *.pdf binary
