--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "ods-lib",
   "private": false,
   "version": "3.0.0",
-  "description": "AngularJS tools Lib developed by One Development Solution LLC.",
+  "description": "AngularJS tools Lib developed by One Development Solutions Corp.",
   "repository": "https://github.com/hermeslm/ods-lib",
+  "author": "Hermes Lorenzo <hermeslm@gmail.com>",
   "license": "MIT",
+  "main": "./dist/ods-lib.js",
   "devDependencies": {
     "bower": "^1.3.1",
     "event-stream": "^3.3.4",
