--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bower": "^1.3.1",
     "event-stream": "^3.3.4",
     "extend": "~2.0.0",
-    "gulp": "~3.8.8",
+    "gulp": "3.9.1",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-clean": "~0.3.1",
