--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ods-lib",
   "description": "AngularJS tools Lib developed by One Development Solution LLC.",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "homepage": "https://github.com/hermeslm/ods-lib",
   "license": "MIT",
   "private": false,
@@ -34,7 +34,8 @@
     "pdfmake": "^0.1.35",
     "ui-cropper": "^1.0.6",
     "ng-file-upload": "^12.2.13",
-    "angular-pdfjs-viewer": "https://github.com/hermeslm/angular-pdfjs-viewer.git#master"
+    "angular-pdfjs-viewer": "https://github.com/hermeslm/angular-pdfjs-viewer.git#master",
+    "angular-ui-mask": "1.8.7"
   },
   "overrides": {
     "angular-jquery": {
