--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ods-lib",
-  "description": "AngularJS tools Lib developed by One Development Solution LLC.",
-  "version": "3.2.1",
+  "description": "AngularJS tools Lib developed by One Development Solution CORP.",
+  "version": "3.2.2",
   "homepage": "https://github.com/hermeslm/ods-lib",
   "license": "MIT",
   "private": false,
