--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "angular-messages": "1.5.8",
     "angular-resource": "1.5.8",
     "jSignature": "*",
-    "jquery": "3.1.0",
+    "jquery": "3.3.0",
     "webcam-directive": "3.1.1",
     "angular-bootstrap-toggle": "^0.1.2",
     "angular-ui-select": "0.19.6",
@@ -34,7 +34,8 @@
     "ui-cropper": "^1.0.6",
     "ng-file-upload": "^12.2.13",
     "angular-pdfjs-viewer": "https://github.com/hermeslm/angular-pdfjs-viewer.git#master",
-    "angular-ui-mask": "1.8.7"
+    "angular-ui-mask": "1.8.7",
+    "lodash": "4.17.10"
   },
   "overrides": {
     "angular-jquery": {
