Fixed error with Forms lib seting config to CKeditor fields. Added view suffix to avoid fields id collisions. Added lodash "_" to jslint globals.

--- a/.jshintrc
+++ b/.jshintrc
@@ -27,6 +27,7 @@
     "beforeEach": false,
     "afterEach": false,
     "module": false,
-    "inject": false
+    "inject": false,
+    "_": false
   }
 }
