--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "main": "./dist/ods-lib.js",
   "devDependencies": {
     "bower": "^1.3.1",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-google": "^0.13.0",
+    "eslint-plugin-import": "^2.18.2",
     "extend": "~2.0.0",
     "gulp": "3.9.1",
     "gulp-angular-filesort": "^1.1.1",
@@ -32,6 +36,7 @@
     "karma": "~0.10",
     "karma-junit-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "~0.1.4",
+    "lodash": "4.17.10",
     "main-bower-files": "^2.13.1",
     "shelljs": "^0.2.6"
   },
