--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ods-lib",
   "description": "AngularJS tools Lib developed by One Development Solution CORP.",
-  "version": "3.6.3",
+  "version": "3.6.4",
   "homepage": "https://github.com/hermeslm/ods-lib",
   "license": "MIT",
   "private": false,
@@ -34,7 +34,8 @@
     "ng-file-upload": "^12.2.13",
     "angular-pdfjs-viewer": "https://github.com/hermeslm/angular-pdfjs-viewer.git#master",
     "angular-ui-mask": "1.8.7",
-    "lodash": "4.17.15"
+    "lodash": "4.17.15",
+    "json-formatter": "^0.7.0"
   },
   "overrides": {
     "angular-jquery": {
