--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ods-lib",
   "description": "AngularJS tools Lib developed by One Development Solution CORP.",
-  "version": "3.7.1",
+  "version": "3.7.2",
   "homepage": "https://github.com/hermeslm/ods-lib",
   "license": "MIT",
   "private": false,
@@ -29,7 +29,7 @@
     "ngstorage": "^0.3.11",
     "angular-moment": "^1.2.0",
     "angular-datatables": "0.5.5",
-    "pdfmake": "^0.1.35",
+    "pdfmake": "0.1.35",
     "ui-cropper": "^1.0.6",
     "ng-file-upload": "^12.2.13",
     "angular-pdfjs-viewer": "https://github.com/hermeslm/angular-pdfjs-viewer.git#master",
